syntax = "proto3";

package instructions;

message StringCombination {
  string e4 = 1;
  string b = 2;
  string g = 3;
  string d = 4;
  string a = 5;
  string e2 = 6;
  string chord = 7;
  string guide = 8;
}

message TabInstructionBlock {
  repeated StringCombination picks = 1;
}

message TabInstruction {
  repeated TabInstructionBlock tab_blocks = 1;
}

enum ChordType {
  UNKNOWN_CHORD = 0;
  A = 1;
  B = 2;
  C = 3;
  D = 4;
  E = 5;
  F = 6;
  G = 7;
}

message Chord {
  ChordType chord_type = 1;
  string name = 2;
}

message ChordInLyric {
  Chord chord = 1;
  int32 offset = 2;
}

message ChordsAndLyrics {
  string lyric_line = 1;
  repeated ChordInLyric chords_in_lyric = 2;
}

message ChordInstruction {
  repeated ChordsAndLyrics chords_and_lyrics = 1;
  repeated Chord chords  = 2;
}

