syntax = "proto3";

package songs;
option go_package = "sochordspb";

import 'instructions.proto';
import 'chords.proto';

message ArtistInfo {
  string name = 1;
}

message SongInfo {
  string title = 1;
  repeated ArtistInfo artists = 2;
  //TODO: Figure out if I can use Int64.
  int32 latest_update_millis = 3;
}

message GuitarInfo {
  int32 capo = 1;
  string tuning = 2;
}

message SongSearchResult {
  string id = 1;
  SongInfo song_info = 2;
}

message SongSectionInfo {
  string name = 1;
}

message BlockLyrics {
  bool enabled = 1;
  string lyrics = 2;
}

message TabSection {
  instructions.TabInstruction instruction = 1;
  BlockLyrics block_lyrics = 2;
}

message ChordSection {
  instructions.ChordInstruction instruction = 1;
}

message SongSection {
  enum SectionType {
    SECTION_TYPE_UNKNOWN = 0;
    TAB_SECTION = 1;
    CHORD_SECTION = 2;
  }
  string id = 1;
  SongSectionInfo info = 2;

  SectionType section_type = 3;
  // Note Only one of these should be set, depending on section_type enum.
  TabSection tab_section = 4;
  ChordSection chord_section = 5;
}

message Song {
  string id = 1;
  string owner_uid = 2;
  enum State {
    STATE_UNKNOWN = 0;
    DRAFT = 1;
    COMPLETE = 2;
  }
  State state = 3;
  SongInfo info = 4;
  GuitarInfo guitar_info = 6;
  repeated SongSection sections = 5;
  repeated SongChord chords = 7;
}
